feat(backend): improvements to crawler and proto
