# server/main.go
@@ -20,12 +20,16 @@
 package main
 
 import (
+	"database/sql"
+	"errors"
 	"fmt"
 	"log"
 	"net"
 	"os"
 	"regexp"
+	"strconv"
 	"strings"
+	"time"
 
 	"context"
 	"flag"
@@ -33,7 +37,11 @@ import (
 
 	pb "github.com/JoeRourke123/Monkey/spec"
 	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
+	"github.com/jmoiron/sqlx"
+	_ "github.com/mattn/go-sqlite3"
 	"google.golang.org/grpc"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 	// gw "github.com/yourorg/yourrepo/proto/gen/go/your/service/v1/your_service"
 )
 
@@ -41,129 +49,332 @@ import (
 // server is used to implement helloworld.GreeterServer.
 type server struct {
 	pb.UnimplementedMonkeyServer
+	//db *sql.DB
 }
 
 const (
-	port      = "localhost:9090"
-	musicPath = "/home/honeyfox/Music/"
+	port         = "localhost:9090"
+	musicPath    = "/home/honeyfox/Music/"
+	databasePath = "./monkey.db"
 )
+
+type Artist struct {
+	ID   int64
+	Name string
+	Path string
+}
+
+type Album struct {
+	ID       int64
+	ArtistID int64 `db:"artist_id"`
+	Name     string
+	Path     string
+}
+type Song struct {
+	ID      int64
+	AlbumID int64 `db:"album_id"`
+	Number  int32
+	Name    string
+	Path    string
+}
 
 var (
-	// command-line options:
-	// gRPC server endpoint
 	grpcServerEndpoint = flag.String("grpc-server-endpoint", "localhost:9090", "gRPC server endpoint")
+	db                 *sqlx.DB
 )
 
-// SayHello implements helloworld.GreeterServer
-func (s *server) GetAlbums(ctx context.Context, in *pb.AlbumRequest) (*pb.AlbumReply, error) {
-	return &pb.AlbumReply{
-		Albums: []*pb.Album{{
-			ImageUrl:   "eggs",
-			AlbumTitle: "ABBA",
-			Songs: []*pb.Song{{
-				SongTitle:   in.GetName(),
-				TrackNumber: "1",
-				SongUrl:     "2",
-			}},
-		}},
+func (s *server) ListArtists(ctx context.Context, in *pb.ArtistsRequest) (*pb.ArtistsReply, error) {
+	artists := []Artist{}
+	err := db.Select(&artists,
+		`SELECT * FROM artist;`)
+	if err != nil {
+		log.Print(err)
+	}
+
+	out := make([]*pb.Artist, len(artists))
+	for i, artist := range artists {
+		out[i] = &pb.Artist{
+			Name:     artist.Name,
+			ImageUrl: "yzx",
+			Id:       artist.ID,
+		}
+	}
+
+	return &pb.ArtistsReply{
+		Artists: out,
+	}, nil
+}
+
+func (s *server) ListAlbums(ctx context.Context, in *pb.AlbumsRequest) (*pb.AlbumsReply, error) {
+
+	albums := []Album{}
+	err := db.Select(&albums,
+		`SELECT * FROM album 
+		WHERE artist_id=$1;`,
+		in.ArtistId)
+	if err != nil {
+		log.Print(err)
+	}
+
+	out := make([]*pb.Album, len(albums))
+	for i, album := range albums {
+		// 	songs := []Song{}
+		// 	err := db.Select(&songs,
+		// 		`SELECT * FROM song
+		// 		WHERE album_id=$1;`,
+		// 		album.ID)
+		// 	if err != nil {
+		// 		log.Print(err)
+		// 	}
+
+		// 	songsOut := make([]*pb.Song, len(songs))
+		// 	for j, song := range songs {
+		// 		songsOut[j] = &pb.Song{
+		// 			Name:   song.Name,
+		// 			Number: song.Number,
+		// 		}
+		// 	}
+
+		out[i] = &pb.Album{
+			Id:       album.ID,
+			ImageUrl: "xyz",
+			Name:     album.Name,
+		}
+	}
+
+	return &pb.AlbumsReply{
+		Albums: out,
+	}, nil
+}
+
+func (s *server) ListSongs(ctx context.Context, in *pb.SongsRequest) (*pb.SongsReply, error) {
+	album := &Album{}
+	err := db.Get(album,
+		`SELECT * FROM album 
+		WHERE id=$1 AND artist_id=$2`,
+		in.AlbumId,
+		in.ArtistId)
+
+	if err == sql.ErrNoRows {
+		return nil, status.Error(codes.NotFound, fmt.Sprintf("artist '%d' has no album '%d'", in.ArtistId, in.AlbumId))
+	} else if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	songs := []Song{}
+	err = db.Select(&songs,
+		`SELECT * FROM song
+		WHERE album_id=$1
+		ORDER BY number;`,
+		in.AlbumId)
+	if err != nil {
+		log.Print(err)
+	}
+
+	out := make([]*pb.Song, len(songs))
+	for i, song := range songs {
+		out[i] = &pb.Song{
+			Name:   song.Name,
+			Number: song.Number,
+		}
+	}
+
+	return &pb.SongsReply{
+		Songs: out,
 	}, nil
 }
 
 func findArtists(dir string) error {
-	artists, err := os.ReadDir(dir)
+	startTime := time.Now()
+
+	artist_names, err := os.ReadDir(dir)
 	if err != nil {
 		return err
 	}
 
-	for _, artist := range artists {
-		if !artist.IsDir() || strings.HasPrefix(artist.Name(), ".") {
+	tx, err := db.Beginx()
+	if err != nil {
+		return err
+	}
+
+	for _, artist_name := range artist_names {
+		if !artist_name.IsDir() || strings.HasPrefix(artist_name.Name(), ".") {
 			continue
 		}
-		fmt.Printf("artist.Name(): %v\n", artist.Name())
 
-		builder := strings.Builder{}
-		builder.WriteString(dir)
-		builder.WriteString(artist.Name())
+		path := strings.Builder{}
+		path.WriteString(dir)
+		path.WriteString(artist_name.Name())
 
-		err := findAlbums(builder.String(), artist.Name())
+		artist := &Artist{
+			Name: artist_name.Name(),
+			Path: path.String(),
+		}
+
+		rows, err := tx.NamedQuery(`
+		INSERT OR REPLACE INTO artist (name, path)
+        VALUES (:name, :path)
+		RETURNING id`, artist)
 		if err != nil {
 			return err
 		}
+		if rows.Next() {
+			rows.Scan(&artist.ID)
+		}
+
+		err = findAlbums(tx, path.String(), artist_name.Name(), artist)
+		if err != nil {
+			return err
+		}
+
 	}
+
+	err = tx.Commit()
+	if err != nil {
+		return err
+	}
+
+	timeTaken := time.Since(startTime)
+	fmt.Printf("endTime: %s\n", timeTaken.Round(time.Millisecond).String())
 
 	return nil
 }
 
-func findAlbums(dir string, artist string) error {
-	albums, err := os.ReadDir(dir)
+func findAlbums(tx *sqlx.Tx, dir string, artist_name string, artist *Artist) error {
+	album_names, err := os.ReadDir(dir)
 	if err != nil {
 		return err
 	}
 
-	for _, album := range albums {
-		if !album.IsDir() || strings.HasPrefix(album.Name(), ".") {
+	for _, album_name := range album_names {
+		if !album_name.IsDir() || strings.HasPrefix(album_name.Name(), ".") {
 			continue
 		}
 
-		albumName := album.Name()
-		if strings.HasPrefix(album.Name(), artist) {
-			albumName = strings.Replace(albumName, artist, "", -1)
+		albumName := album_name.Name()
+
+		rm := regexp.MustCompile(`\(.*\)`)
+		albumName = rm.ReplaceAllString(albumName, "")
+
+		albumName = strings.Trim(albumName, "- ")
+
+		if strings.HasPrefix(albumName, artist_name) && !strings.HasSuffix(albumName, artist_name) {
+			albumName = strings.Replace(albumName, artist_name, "", -1)
 		}
 
 		albumName = strings.Trim(albumName, "- ")
-		fmt.Printf("\talbumName: %v\n", albumName)
 
-		builder := strings.Builder{}
-		builder.WriteString(dir)
-		builder.WriteString("/")
-		builder.WriteString(album.Name())
+		path := strings.Builder{}
+		path.WriteString(dir)
+		path.WriteString("/")
+		path.WriteString(album_name.Name())
 
-		err := findSongs(builder.String(), artist, albumName)
+		album := &Album{
+			Name:     albumName,
+			ArtistID: artist.ID,
+			Path:     path.String(),
+		}
+
+		rows, err := tx.NamedQuery(`
+		INSERT INTO album (artist_id, name, path)
+        VALUES (:artist_id, :name, :path)
+		RETURNING id;`, album)
 		if err != nil {
 			return err
 		}
+		if rows.Next() {
+			rows.Scan(&album.ID)
+		}
+
+		err = findSongs(tx, path.String(), artist_name, albumName, album)
+		if err != nil {
+			return err
+		}
+
 	}
 
 	return nil
 }
 
-func findSongs(dir string, artist string, album string) error {
-	songs, err := os.ReadDir(dir)
+func findSongs(tx *sqlx.Tx, dir string, artist_name string, album_name string, album *Album) error {
+	song_names, err := os.ReadDir(dir)
 	if err != nil {
 		return err
 	}
 
-	for _, song := range songs {
-		if song.IsDir() {
+	for _, song_name := range song_names {
+		if song_name.IsDir() {
 			// this must be a Disc 01/CD 01 folder or so
 			builder := strings.Builder{}
 			builder.WriteString(dir)
 			builder.WriteString("/")
-			builder.WriteString(song.Name())
+			builder.WriteString(song_name.Name())
 
-			err := findSongs(builder.String(), artist, album)
+			err := findSongs(tx, builder.String(), artist_name, album_name, album)
 			if err != nil {
 				return err
 			}
 			continue
 		}
-		if strings.HasPrefix(song.Name(), ".") {
+		if strings.HasPrefix(song_name.Name(), ".") {
 			continue
 		}
 
-		r := regexp.MustCompile(`^\d+`) // \.?
-		trackNumber := r.FindString(song.Name())
-
-		songName := song.Name()
-		if trackNumber != "" {
-			songName = strings.Replace(songName, trackNumber, "", -1)
-			songName = strings.TrimSpace(songName)
-			songName = strings.Trim(songName, "-. ")
+		if !(strings.HasSuffix(song_name.Name(), ".mp3") || strings.HasSuffix(song_name.Name(), ".ogg")) {
+			continue
 		}
 
-		fmt.Printf("\t\ttrackNumber: %v\n", trackNumber)
+		rt := regexp.MustCompile(`^\d+`) // \.?
+		trackNumber := rt.FindString(song_name.Name())
 
-		fmt.Printf("\t\tsong.Name(): %v\n", songName)
+		trackName := song_name.Name()
+		if trackNumber != "" {
+			split := strings.Split(trackName, ".")
+			trackName = strings.Join(split[:len(split)-1], ".")
+
+			rm := regexp.MustCompile(`\[.*\]`)
+			trackName = rm.ReplaceAllString(trackName, "")
+			trackName = strings.Trim(trackName, "-. ")
+
+			// this handles cases where the track name is the same as the album/artist name
+			if !strings.HasSuffix(trackName, trackNumber) {
+				trackName = strings.Replace(trackName, trackNumber, "", -1)
+			}
+			if !strings.HasSuffix(trackName, album.Name) {
+				trackName = strings.Replace(trackName, album.Name, "", -1)
+			}
+			if !strings.HasSuffix(trackName, artist_name) {
+				trackName = strings.Replace(trackName, artist_name, "", -1)
+			}
+
+			trackName = strings.Trim(trackName, "-. ")
+		}
+
+		path := strings.Builder{}
+		path.WriteString(dir)
+		path.WriteString("/")
+		path.WriteString(song_name.Name())
+
+		trackNumberInt, err := strconv.Atoi(trackNumber)
+		if err != nil {
+			trackNumberInt = -1
+		}
+
+		song := &Song{
+			Number:  int32(trackNumberInt),
+			Name:    trackName,
+			AlbumID: album.ID,
+			Path:    path.String(),
+		}
+
+		_, err = tx.NamedExec(`
+		INSERT INTO song (album_id, number, name, path)
+        VALUES (:album_id, :number, :name, :path)
+		RETURNING id;`, song)
+		if err != nil {
+			return err
+		}
+
 	}
 
 	return nil
@@ -205,12 +416,83 @@ func run() error {
 func main() {
 	flag.Parse()
 
-	err := findArtists(musicPath)
+	os.Remove(databasePath)
+
+	_, err := os.Stat(databasePath)
+	exist := !errors.Is(err, os.ErrNotExist)
+
+	db, err = sqlx.Connect("sqlite3", databasePath)
+	if err != nil {
+		log.Fatal(err)
+	}
+	defer func() {
+		err := db.Close()
+		if err != nil {
+			log.Fatal(err)
+		}
+	}()
+
+	if !exist {
+		log.Print("setting up tables")
+
+		err = setupTables(db)
+		if err != nil {
+			log.Fatalf("error setting up db: %s", err.Error())
+		}
+	}
+
+	err = findArtists(musicPath)
 	if err != nil {
 		log.Printf("error walking directories: %s", err.Error())
 	}
 
+	// artists := []Artist{}
+	// err = db.Select(&artists, `SELECT * FROM artist;`)
+	// if err != nil {
+	// 	log.Print(err)
+	// }
+
+	// for i, a := range artists {
+	// 	fmt.Printf("i: %v, a: %v\n", i, a)
+	// }
+
 	if err := run(); err != nil {
 		log.Fatal(err)
 	}
+}
+
+func setupTables(db *sqlx.DB) error {
+	_, err := db.Exec(`CREATE TABLE artist (
+		id INTEGER PRIMARY KEY AUTOINCREMENT,
+		name VARCHAR,
+		path VARCHAR
+	);`)
+	if err != nil {
+		return err
+	}
+
+	_, err = db.Exec(`CREATE TABLE album (
+		id INTEGER PRIMARY KEY AUTOINCREMENT,
+		name VARCHAR,
+		artist_id INTEGER,
+		path VARCHAR,
+		FOREIGN KEY(artist_id) REFERENCES artist(id)
+	);`)
+	if err != nil {
+		return err
+	}
+
+	_, err = db.Exec(`CREATE TABLE song (
+		id INTEGER PRIMARY KEY AUTOINCREMENT,
+		number INTEGER,
+		name VARCHAR,
+		album_id INTEGER,
+		path VARCHAR,
+		FOREIGN KEY(album_id) REFERENCES album(id)
+	);`)
+	if err != nil {
+		return err
+	}
+
+	return nil
 }
